syntax = "proto3";
package pb;

service Registe {
  // Sends a greeting
  rpc Registe (DeviceRegisteRequest) returns (DeviceRegisteResponse) {}
}

message DeviceRegisteRequest{
	uint64 Rid = 1;			//流水号
	string SsoToken = 11;	//统一登陆系统登陆token
	string AppId = 12;		//应用id
	string DeviceId = 13;	//设备id
	string Platform = 14;	//平台
}

message DeviceRegisteResponse{
	uint64 Rid = 1;	//流水号
	string Code = 2;	//回应的响应码
	string Desc = 3;	//回应码的描述
 	string Token = 11;	//注册后的凭证,imToken
}